@@ -30,7 +30,7 @@
 #endif
 #include <stdlib.h>
 #include <iostream>
-#include <cstdlib>     // getenv
+//#include <cstdlib>     // getenv
 #include "GMWLLib.hpp"
 #include "test_MWL.hpp"
 
@@ -39,7 +39,7 @@
 /* __ Globals ____________________________________________________________ */
 
 /* __ Constants __________________________________________________________ */
-const std::string datadir        = std::getenv("TEST_MWL_DATA");
+const std::string datadir        = gammalib::getenv("TEST_MWL_DATA");
 const std::string lat_crab_model = datadir + "/crab.xml";
 const std::string lat_crab_fits  = datadir + "/crab.fits";
 const std::string crab_model     = datadir + "/crab_mwl.xml";
